<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Russian Tester</string>
    <string name="action_settings">Settings</string>
    <string name="menu_test_button_text">Test me!</string>
    <string name="menu_settings_button_text">Settings</string>
    <string name="menu_statistics_button_text">Stats</string>
    <string name="menu_learn_button_text">Learn</string>
    <string name="actionbar_report_bug">Report bug</string>
    <string name="action_exit">Exit</string>
    <string name="correct_toast">Correct</string>
    <string name="incorrect_toast">Incorrect</string>

</resources>
