<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Base.ThemeOverlay.AppCompat.Dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainScreenActivity">


    <TextView
        android:id="@+id/textViewOne"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center|top"
        android:text="@string/app_name"
        android:textColor="@color/BlueViolet"
        android:textSize="@dimen/_40sdp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="@color/DimGrayAlpha100" />

    <Button
        android:id="@+id/menu_learn_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_weight="10"
        android:onClick="onGetLearnClick"
        android:paddingTop="0dp"
        android:shadowColor="@color/Blue"
        android:text="@string/menu_learn_button_text"
        android:textAllCaps="false"
        android:textSize="@dimen/button_text_size" />

    <Button
        android:id="@+id/menu_test_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_weight="10"
        android:paddingTop="0dp"
        android:text="@string/menu_test_button_text"
        android:textAllCaps="false"
        android:textSize="@dimen/button_text_size" />

    <Button
        android:id="@+id/menu_settings_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_weight="10"
        android:paddingTop="0dp"
        android:text="@string/menu_settings_button_text"
        android:textAllCaps="false"
        android:textSize="@dimen/button_text_size"

        />

    <Button
        android:id="@+id/menu_statistics_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@+dimen/button_height"
        android:layout_weight="10"
        android:paddingTop="0dp"
        android:text="@string/menu_statistics_button_text"
        android:textAllCaps="false"
        android:textSize="@dimen/button_text_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="@color/DimGrayAlpha100" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@+dimen/button_height"
        android:layout_weight="20" />

</LinearLayout>